--- a/.gitignore
+++ b/.gitignore
@@ -167,4 +167,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/phpstorm,macos,windows,webstorm,sublimetext
+# End of https://www.gitignore.io/api/phpstorm,macos,windows,webstorm,sublimetext.idea
