Added composer files.

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,11 @@
 !.gitignore
 !wp-content/themes/**
 !wp-content/plugins/**
+!composer.json
+!composer.lock
 *.DS_Store
 *.idea
 .idea
-
 # Created by https://www.gitignore.io/api/composer
 
 ### Composer ###
