Moved all dependencies to composer (Except for wordpress core.)

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 *
 !*/
-!.gitignore
-!composer.json
-!composer.lock
+!/.gitignore
+!/composer.json
+!/composer.lock
 # Created by https://www.gitignore.io/api/composer
 
 ### Composer ###
